[fix] contrast on selection text
As pointed out by user Soiled-Linen (aka. Lint), the website's current selection background being yellow makes selected text difficult to view. Lint suggested fixing this by changing the text colour to a dark red.

This commit instead keeps the text colour as white, and sets the _background_ colour to a somewhat lighter dark red, which makes highlighting consistent with the colour pattern for link hovers and tab selection on the website (both of which are white text on a red background). The new background colour `#A0303B` has been tested on multiple websites to pass AA- and AAA-compliance for normal and large text.

--- a/src/notmyidea-cms/static/css/main.css
+++ b/src/notmyidea-cms/static/css/main.css
@@ -73,8 +73,8 @@ p {margin-bottom: 1.143em;}
 strong, b {font-weight: bold;}
 em, i {font-style: italic;}
 
-::-moz-selection {background: #F6CF74; color: #330022;}
-::selection {background: #F6CF74; color: #330022;}
+::-moz-selection {background: #A0303B; color: #fff;}
+::selection {background: #A0303B; color: #fff;}
 
 /* Lists */
 ul {
